dev/non_executable_reasons_record_from_random_10k/1506.txt
3.5
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
%%writefile test.txt
Hello, this is a quick test file
------------------

[0;36m  File [0;32m"<ipython-input-1-ea11002f6068>"[0;36m, line [0;32m3[0m
[0;31m    %%writefile test.txt[0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-ea11002f6068>, line 3)

Executability                            : False
